# spotmap

./: .gitignore  AUTHORS.md  COMMIT_MSG.tmp  DOCUMENTATION.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: spotmap_colab.ipynb
spotmap/: __init__.py  cli.py  interactive.py  layers.py  loader.py  map_builder.py  sidebar.py  spatial.py
tests/: test_builder.py  test_loader.py
