[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotmap"
version = "0.1.23"
description = "Interactive epidemiological spot maps for India"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Muniraj Mallesan", email = "adarv@nieicmr.org.in" },
  { name = "Dr. Sharan Murali" },
  { name = "Manikandan K" },
  { name = "Shanmuga Sundharam" },
  { name = "Yogita Chaudhary" },
  { name = "Barath U" },
  { name = "Balaji S" },
  { name = "Deepana R" },
]
maintainers = [
  { name = "Muniraj Mallesan", email = "adarv@nieicmr.org.in" },
]
keywords = ["epidemiology", "spot map", "india", "geospatial", "folium", "case-control"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "folium>=0.14",
  "geopandas>=0.13",
  "numpy>=1.24",
  "pandas>=2.0",
  "shapely>=2.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/ADARV-Epi-hub/spotmap"
Repository = "https://github.com/ADARV-Epi-hub/spotmap"
"Bug Tracker" = "https://github.com/ADARV-Epi-hub/spotmap/issues"

[project.scripts]
spotmap = "spotmap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["spotmap"]

[tool.hatch.build.targets.sdist]
include = ["spotmap/", "README.md", "LICENSE", "pyproject.toml"]
